[project]
name = "cfa-dagster"
version = "0.1.0"
description = "CFA libraries for Dagster"
readme = "README.md"
authors = [
    { name = "Giovanni Rella", email = "giomrella@gmail.com" }
]
requires-python = ">=3.9,<3.14"
dependencies = [
    "azure-identity>=1.23.1",
    "msrest==0.7.1",
    "azure-batch==14.2.0",
    "azure-mgmt-appcontainers>=3.2.0",
    "azure-mgmt-resource>=24.0.0",
    "dagster-azure>=0.27.4",
    "dagster-docker>=0.27.4",
    "dagster-postgres>=0.27.4",
    "dagster==1.12.1",
    "cfa-dagster",
    "pydantic>=2.11.7",
    "aiofiles>=24.1.0",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
