[project]
name = "cfa-dagster"
version = "0.1.0"
description = "CFA libraries for Dagster"
readme = "README.md"
authors = [
    { name = "Giovanni Rella", email = "giomrella@gmail.com" }
]
requires-python = ">=3.10,<3.14"
dependencies = [
    "pyyaml~=6.0.2",
    "azure-identity~=1.25.1",
    "msrest~=0.7.1",
    "azure-batch~=14.2.0",
    "azure-mgmt-appcontainers>=4.0.0",
    "azure-mgmt-subscription~=3.1.1",
    "dagster-azure~=0.29.2",
    "dagster-docker~=0.29.2",
    "dagster>=1.12.2,<1.14",
    "dagster-shared>=1.12.2,<1.14",
    "dagster-graphql>=1.12.2,<1.14",
    "dagster-postgres~=0.29.2",
    "aiofiles~=24.1.0",
    "azure-keyvault-secrets",
    "psycopg2-binary",
    # used by dagster clis, just importing an error
    "click"
]

[project.scripts]
cfa-dagster = "cfa_dagster.utils:run_dagster"
cfa-dg = "cfa_dagster.utils:run_dg"
cfa-dagster-webserver = "cfa_dagster.utils:run_dagster_webserver"

[project.optional-dependencies]
test = [
    "pytest>=7.0.0",
]
dev = [
    "dagster-webserver>=1.12.2,<1.14",
    "dagster-dg-cli~=1.13.3",
]

[build-system]
requires = ["uv_build>=0.8.4,<0.9.0"]
build-backend = "uv_build"
