[project]
name = "cfa-dagster-infra"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12,<3.14"
dependencies = [
    "dagster",
    "dagster-pipes",
    "dagster-graphql",
    "dagster-webserver",
    "dagster-postgres",
    "dagster-docker",
    "dagster-azure",
    "cfa-dagster @ git+https://github.com/cdcgov/cfa-dagster.git"
]

# [project.scripts]
# hello = "hello_world:hello"

[build-system]
requires = ["uv_build>=0.9.0,<0.10.0", "setuptools", "wheel"]
# build-backend = "uv_build"
