[project]
name = "cfa-dagster-infra"
version = "0.1.0"
description = "The project for CFA's Dagster webserver, daemon, and primary code location"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "dagster==1.12.2",
    "dagster-pipes==1.12.2",
    "dagster-graphql==1.12.2",
    "dagster-webserver==1.12.2",
    "dagster-azure>=0.27.4",
    "dagster-docker>=0.27.4",
    "dagster-postgres>=0.27.4",
    "pyyaml>=6.0.2",
    "azure-identity>=1.23.0",
    "azure-batch==14.2.0",
    "azure-mgmt-appcontainers==3.2.0",
    "azure-mgmt-containerinstance",
    "azure-mgmt-loganalytics",
    "azure-mgmt-subscription>=3.1.1",
    "requests>=2.32.5",
    "cfa-dagster @ git+https://github.com/cdcgov/cfa-dagster.git",
]

# necessary so uv doesn't try to capture the parent directory
[tool.uv]
workspace = { members = ["infra"] }
