[project]
name = "cfa-dagster-infra"
version = "0.1.0"
description = "The project for CFA's Dagster webserver, daemon, and primary code location"
readme = "README.md"
requires-python = ">=3.13,<3.14"
dependencies = [
    "azure-identity>=1.25.0",
    "azure-batch>=14.2.0",
    "azure-mgmt-appcontainers~=4.0.0",
    "azure-mgmt-containerinstance",
    "azure-mgmt-loganalytics",
    "azure-mgmt-subscription>=3.1.1",
    "requests>=2.32.5",
    "cfa-dagster[dev]",
    "azure-mgmt-msi~=7.1.0",
]


[tool.uv.sources]
cfa-dagster = { path = ".." }

# necessary so uv doesn't try to capture the parent directory
[tool.uv]
workspace = { members = ["infra"] }

# the below configures `dg dev` to look at the local dagster_defs.py file
[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_defs"
defs_module = "dagster_defs"
code_location_target_module = "dagster_defs"
